rnsc/tests/snapshots/error-lexer-directives-dot_newline.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.
.end
----- STDERR -----
[PARSER-001] Error: unexpected identifier before class definition
   ╭─[ test_data/integration/error/lexer/directives/dot_newline.rns:1:1 ]
   │
 1 │ .
   │ ┬  
   │ ╰── this identifier must appear inside a class definition
   │ 
   │ Note: Found identifier '.' before any class was defined. Did you forget to start the class? Try: '.class .'
───╯
----- HASH -----
not generated
