rnsc/tests/snapshots/error-lexer-directives-dot_semicolon.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
    .;comment after semicolon
.method_end
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_semicolon.rns:2:5 ]
   │
 2 │     .;comment after semicolon
   │     ────┬────  
   │         ╰────── '.;comment' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
