rnsc/tests/snapshots/error-lexer-directives-dot_semicolon_werror.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
    .;comment after semicolon
.end
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_semicolon.rns:2:5 ]
   │
 2 │     .;comment after semicolon
   │     ────┬────  
   │         ╰────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
