rnsc/tests/snapshots/error-lexer-directives-dot_sode.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.codE
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_sode.rns:1:1 ]
   │
 1 │ .codE
   │ ──┬──  
   │   ╰──── '.codE' is not a recognized directive
   │ 
   │ Help: Did you mean '.code'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
