rnsc/tests/snapshots/error-lexer-directives-dot_space.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
    . whaaat?
.end
----- STDERR -----
[PARSER-001] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/lexer/directives/dot_space.rns:1:1 ]
   │
 1 │ .method
   │ ───┬───  
   │    ╰───── '.method' is only allowed inside a class definition
   │ 
   │ Note: Define a class first using '.class [access_flags] <name>'.
───╯
----- HASH -----
not generated
