rnsc/tests/snapshots/error-lexer-directives-dot_space_class.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
. class
----- STDERR -----
Error: unexpected character
   ╭─[ test_data/integration/error/lexer/directives/dot_space_class.rns:1:2 ]
   │
 1 │ . class
   │  ┬  
   │  ╰── found ' ' here
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
